# touchy-pad

./: .gitignore  .gitmodules  .pre-commit-config.yaml  AGENTS.md  Justfile  README.md  TODO.md  VERSION  eim_config.toml
.devcontainer/: Containerfile  devcontainer-lock.json  devcontainer.json
.devcontainer/fedora/: Dockerfile  devcontainer.json  post-create.sh
.github/actions/setup-python-poetry-just-proto/: action.yml
.github/workflows/: app-ci.yml  build-firmware.yml  build-opendeck.yml  publish-pypi.yml  release.yml
app/: README.md  mkdocs.yml  pyproject.toml
app/docs/: device.md  images.md  index.md  macros.md  protobuf.md  screens.md
app/examples/: demo.py
app/src/touchy_pad/: __init__.py  cli.py  client.py  errors.py  hid_keys.py  lvgl_image.py  macros.py  paths.py  screens.py  transport.py  transport_net.py  transport_serial.py  update.py  usb_ids.py
app/tests/: __init__.py  test_api.py  test_board_config.py  test_client.py  test_framing.py  test_image_cache.py  test_images.py  test_images_dynamic.py  test_logs.py  test_lvgl_image.py  test_network_http.py  test_screens.py  test_set_property.py  test_sim_transport.py  test_sim_window.py  test_touchydeck.py  test_transport_net.py  test_transport_serial.py
docs/: README.md  TODO-git-crypt.md  TODO.md  announce.md  companion-app.md  design.md  development.md  hardware.md  host-api.md  installing.md  led-art.md  network-api.md  open-issues.md  opendeck-device-plugin.md  opendeck.md  pypi-checklist.md  pypi-publishing.md  python-api.md  python-demo.md  rust-api.md  simulator.md  udev.md  ui.md  user-widgets.md  why-not-xml.md
docs/hardware/esp32-024/: README.md
docs/hardware/esp32_s3_devkitc_1/: README.md
docs/hardware/esp32_s3_matrix/: README.md
docs/hardware/lightbar/: TODO.md  cooling.md  custom-pcb.md  design.md  flat-panel.md  lightbar.md
docs/hardware/xiao_es32_s3/: README.md
docs/python-api/: 404.html  index.html  objects.inv
docs/python-api/device/: index.html
docs/python-api/images/: index.html
docs/python-api/macros/: index.html
firmware/: .gitignore  AGENTS.md  CMakeLists.txt  README.md  platformio.ini  sdkconfig.defaults  version.cmake
firmware/boards/: BOARD_WAVESHARE_ESP32_S3_TOUCH_LCD_7.json
firmware/boards/elecrow_p4_lcd_7/board/: CMakeLists.txt  board.cpp  board_pins.h  display.cpp  touch.cpp
firmware/boards/esp32_2432s024/board/: CMakeLists.txt  board_pins.h
firmware/boards/esp32_2432s028rv3/board/: CMakeLists.txt  board_pins.h
firmware/boards/esp32_s3_devkitc_1/board/: CMakeLists.txt  board.cpp  board_pins.h  touch.cpp
firmware/boards/esp32_s3_matrix/board/: CMakeLists.txt  board.cpp  board_pins.h  idf_component.yml  touch.cpp
firmware/boards/jc4827w543/board/: CMakeLists.txt  board.cpp  board_pins.h  display.cpp  idf_component.yml  nv3041a.c  nv3041a.h  touch.cpp
firmware/boards/jc4827w543r/board/: CMakeLists.txt  board.cpp  board_pins.h  idf_component.yml  touch.cpp
firmware/boards/jc_esp32p4_m3/board/: CMakeLists.txt  board.cpp  board_pins.h  display.cpp  idf_component.yml  led_display.h  touch.cpp
firmware/include/: esp_utils_conf.h  lv_conf.h
firmware/main/: CMakeLists.txt  Kconfig.projbuild  backlight.cpp  backlight.h  board.h  coredump_report.cpp  coredump_report.h  debug.cpp  debug.h  display.cpp  display.h  fs.cpp  fs.h  host_api.cpp  host_api.h  idf_component.yml  idf_component.yml.new  log_line.cpp  log_line.h  log_proto.cpp  log_proto.h  lv_throttled.cpp  lv_throttled.h  macros.cpp  macros.h  main.cpp  platform.cpp  platform.h  prefs.cpp  prefs.h  protobuf.h  screens.cpp  screens.h  tc_tag.h  touch.h  trackpad_widget.cpp  trackpad_widget.h  usb_hid.cpp  usb_hid.h  usb_hid_stub.cpp  (+3 more)
firmware/main/api/: host_api.cpp  host_api.h  host_api_link.h  serial_link.cpp  serial_link.h  uart_link.cpp  uart_link.h  vendor_link.cpp  vendor_link.h
firmware/main/fs/: flash_fs.cpp  flash_fs.h  fs.cpp  fs.h  ram_fs.cpp  ram_fs.h  temp_fs.cpp  temp_fs.h
firmware/main/leds/: led_display.cpp  led_display.h  led_panel.h  panel.h
firmware/main/net/: http_api.cpp  http_api.h  json.cpp  json.h  network.cpp  network.h
firmware/main/widgets/: force_render_widget.cpp  fps_widget.cpp  image_mmap.cpp  log_line.cpp  screen_layout.cpp  screen_layout.h  trackpad_widget.cpp  trackpad_widget.h  widget_actions.cpp  widget_actions.h  widget_animations.cpp  widget_animations.h  widget_builders.cpp  widget_builders.h  widget_property.cpp  widget_property.h  widget_styles.cpp  widget_styles.h
firmware/partitions/: 16M.csv  4M.csv
firmware/src/: main.cpp  trackpad_widget.cpp  trackpad_widget.h
proto/: .gitignore  default_screen.json  default_screen_touchless.json  embed_screen_json.py  gen_default_screen.py  preferences.options  preferences.proto  touchy.options  touchy.proto  widgets.options  widgets.proto
rust/: .gitignore  Cargo.toml  README.md
rust/touchy-demo/: Cargo.toml
rust/touchy-demo/src/: main.rs
rust/touchy-opendeck/: Cargo.toml  README.md
rust/touchy-opendeck/com.geeksville.touchypad.sdPlugin/: manifest.json
rust/touchy-opendeck/src/: layout.rs  main.rs  plugin.rs
rust/touchy-pad/: Cargo.toml  build.rs
rust/touchy-pad/proto/: preferences.proto  widgets.proto
rust/touchy-pad/src/: client.rs  discover.rs  error.rs  image_cache.rs  images.rs  lib.rs  pad.rs  proto.rs  transport.rs  transport_net.rs  transport_serial.rs  transport_usb.rs
rust/touchy-pad/tests/: client_loopback.rs  framing.rs  image_cache.rs  images.rs  pad_events.rs  sim_tcp.rs
tools/streamdeck-probe/: .gitignore  README.md  pyproject.toml
tools/streamdeck-probe/samples/: probe-20260522-163537.jsonl  probe-20260522-163537.txt
tools/streamdeck-probe/src/streamdeck_probe/: __init__.py  cli.py  log.py  probe.py
udev/: 99-touchy-pad.rules
v2/: .gitignore  CMakeLists.txt  README.md  sdkconfig.defaults
v2/boards/waveshare_s3_lcd_7b/board/: CMakeLists.txt  idf_component.yml  touch.cpp
v2/main/: CMakeLists.txt  board.cpp  board.h  display.cpp  display.h  idf_component.yml  idf_component.yml.new  main.cpp  touch.cpp  touch.h  trackpad_widget.cpp  usb_hid.cpp
(+113 files in other folders)
