[workspace]
resolver = "2"
members = ["touchy-pad", "touchy-demo", "touchy-opendeck"]

[workspace.package]
version = "0.2.12"
edition = "2024"
license = "GPL-3.0-or-later"
repository = "https://github.com/geeksville/touchy-pad"
authors = ["Touchy-Pad contributors"]
rust-version = "1.85"

[workspace.dependencies]
prost = "0.13"
prost-build = "0.13"
nusb = { version = "0.2", features = ["tokio"] }
tokio = { version = "1.40", features = ["rt", "rt-multi-thread", "sync", "time", "macros", "io-util", "net"] }
thiserror = "1"
anyhow = "1"
log = "0.4"
env_logger = "0.11"
bytes = "1"
image = { version = "0.25", default-features = false, features = ["png", "jpeg", "bmp", "gif", "webp"] }
clap = { version = "4.5", features = ["derive"] }
futures = "0.3"
libc = "0.2"
async-trait = "0.1"

# Release profile tuned for distributed binaries (the OpenDeck plugin is
# shipped to end users). `strip` drops debug symbols for a much smaller
# binary; thin LTO + a single codegen unit trade a little build time for
# a faster, smaller artifact.
[profile.release]
strip = true
lto = "thin"
codegen-units = 1
