# SPDX-License-Identifier: GPL-3.0-or-later
#
# `main` is board-agnostic: it pulls in the app logic only. The currently
# selected board provides a `board` component (under boards/<board>/) that
# implements board.h / display.h / touch.h. We REQUIRE it here so the
# board's CMakeLists is parsed and its public headers are on our include
# path.

# The USB/HID stack is only compiled for chips with native USB-OTG. That
# capability is implied by the IDF target (CONFIG_SOC_USB_OTG_SUPPORTED is
# set for the esp32s3 but not the classic esp32), so no custom flag is
# needed. Boards without native USB build a tiny stub that turns the HID
# emitters into logged no-ops instead.
if(CONFIG_SOC_USB_OTG_SUPPORTED)
    set(touchy_usb_src "usb_hid.cpp")
else()
    set(touchy_usb_src "usb_hid_stub.cpp")
endif()

idf_component_register(
    SRCS
        "main.cpp"
        "${touchy_usb_src}"
        "host_api.cpp"
        "platform.cpp"
        "fs/fs.cpp"
        "fs/flash_fs.cpp"
        "fs/ram_fs.cpp"
        "fs/temp_fs.cpp"
        "prefs.cpp"
        "backlight.cpp"
        "debug.cpp"
        "lv_throttled.cpp"
        "screens.cpp"
        "widgets/screen_layout.cpp"
        "widgets/widget_actions.cpp"
        "widgets/widget_animations.cpp"
        "widgets/widget_builders.cpp"
        "widgets/widget_styles.cpp"
        "widgets/image_mmap.cpp"
        "widgets/fps_widget.cpp"
        "widgets/force_render_widget.cpp"
        "macros.cpp"
        "widgets/trackpad_widget.cpp"
        "widgets/log_line.cpp"
        "log_proto.cpp"
        "coredump_report.cpp"
        # Generated by `just build-proto-c` from proto/touchy.proto and
        # proto/widgets.proto into firmware/main/proto/.
        "proto/touchy.pb.c"
        "proto/widgets.pb.c"
        "proto/preferences.pb.c"
    INCLUDE_DIRS
        "."
        "fs"
        "widgets"
        "proto"
        "${CMAKE_BINARY_DIR}"
    REQUIRES
        board
        esp_lcd
        esp_mm
        esp_timer
        esp_app_format
        esp_driver_uart
        esp_hw_support
        espcoredump
        joltwallet__littlefs
)
