# SPDX-License-Identifier: GPL-3.0-or-later
#
# `main` is board-agnostic: it pulls in the app logic only. The currently
# selected board provides a `board` component (under boards/<board>/) that
# implements board.h / display.h / touch.h. We REQUIRE it here so the
# board's CMakeLists is parsed and its public headers are on our include
# path.

# The USB/HID stack is only compiled for chips with native USB-OTG. That
# capability is implied by the IDF target (CONFIG_SOC_USB_OTG_SUPPORTED is
# set for the esp32s3 but not the classic esp32), so no custom flag is
# needed. Boards without native USB build a tiny stub that turns the HID
# emitters into logged no-ops instead.
if(CONFIG_SOC_USB_OTG_SUPPORTED)
    set(touchy_usb_src "usb_hid.cpp")
else()
    set(touchy_usb_src "usb_hid_stub.cpp")
endif()

# Stage lb8 — the WiFi + HTTP(S) network API is only compiled on
# WiFi-capable chips (CONFIG_TOUCHY_WIFI). The net/*.cpp bodies are
# #if-guarded on the same flag. The component dependencies are added
# *after* idf_component_register via idf_component_optional_requires so
# non-WiFi targets (esp32p4, classic-esp32) that don't have esp_wifi etc.
# installed never fail the CMake configure step.
set(touchy_net_srcs "")
if(CONFIG_TOUCHY_WIFI)
    set(touchy_net_srcs "net/network.cpp" "net/http_api.cpp")
endif()

idf_component_register(
    SRCS
        "main.cpp"
        "${touchy_usb_src}"
        "api/host_api.cpp"
        "api/vendor_link.cpp"
        "api/serial_link.cpp"
        "api/uart_link.cpp"
        ${touchy_net_srcs}
        "platform.cpp"
        "fs/fs.cpp"
        "fs/flash_fs.cpp"
        "fs/ram_fs.cpp"
        "fs/temp_fs.cpp"
        "prefs.cpp"
        "display.cpp"
        "backlight.cpp"
        "debug.cpp"
        "lv_throttled.cpp"
        "screens.cpp"
        "widgets/screen_layout.cpp"
        "widgets/widget_actions.cpp"
        "widgets/widget_animations.cpp"
        "widgets/widget_builders.cpp"
        "widgets/widget_styles.cpp"
        "widgets/image_mmap.cpp"
        "widgets/fps_widget.cpp"
        "widgets/force_render_widget.cpp"
        "macros.cpp"
        "widgets/trackpad_widget.cpp"
        "widgets/log_line.cpp"
        "log_proto.cpp"
        "coredump_report.cpp"
        # Generated by `just build-proto-c` from proto/touchy.proto and
        # proto/widgets.proto into firmware/main/proto/.
        "proto/touchy.pb.c"
        "proto/widgets.pb.c"
        "proto/preferences.pb.c"
    INCLUDE_DIRS
        "."
        "api"
        "fs"
        "net"
        "../boards/common/leds"
        "widgets"
        "proto"
        "${CMAKE_BINARY_DIR}"
    REQUIRES
        board
        esp_lcd
        esp_mm
        esp_timer
        esp_app_format
        esp_driver_uart
        esp_hw_support
        espcoredump
        joltwallet__littlefs
)

# Stage lb8 — optional WiFi + HTTP(S) component dependencies. Must be
# declared AFTER idf_component_register. idf_component_optional_requires
# skips any component that isn't present in the current target's build
# (so esp32p4 / classic-esp32 builds never fail on missing WiFi
# components). mdns is a managed component; its short name works here.
if(CONFIG_TOUCHY_WIFI)
    idf_component_optional_requires(PRIVATE
        esp_wifi
        esp_netif
        esp_event
        nvs_flash
        esp_http_server
        mdns
        esp-tls
    )
endif()
